--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "axios": "^0.15.3",
     "babel-polyfill": "^6.16.0",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.1.1",
+    "express": "^4.14.0",
     "flux": "^3.1.0",
+    "jquery": "^3.1.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-promise-middleware": "^4.2.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "webpack-dev-middleware": "^1.9.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
@@ -39,6 +41,7 @@
     "babel-preset-stage-0": "~6.16.0",
     "css-loader": "~0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "style-loader": "~0.13.1",
     "webpack": "~1.13.3"
   },
