--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-es2015": "~6.18.0",
     "babel-preset-react": "~6.16.0",
     "babel-preset-stage-0": "~6.16.0",
+    "browser-sync": "^2.18.5",
     "css-loader": "~0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
